"""Database models"""
from sqlalchemy import Column, Integer, String, DateTime, Text, Float, ForeignKey, Boolean
from sqlalchemy.dialects.postgresql import UUID
import uuid
from sqlalchemy.orm import relationship
from sqlalchemy.sql import func
from db.database import Base
from enum import Enum


class SongStatus(str, Enum):
    """Enum for song generation status"""
    PENDING = "PENDING"
    PROGRESS = "PROGRESS"
    SUCCESS = "SUCCESS"
    FAILURE = "FAILURE"
    CANCELLED = "CANCELLED"


class Song(Base):
    """Model for storing song generation data and results"""
    __tablename__ = "songs"
    __table_args__ = {'extend_existing': True}
    
    # Primary identifiers
    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    task_id = Column(String(255), nullable=False, unique=True, index=True)  # Celery Task ID
    job_id = Column(String(255), nullable=True, index=True)  # MUREKA Job ID
    
    # Input parameters
    lyrics = Column(Text, nullable=False)
    prompt = Column(Text, nullable=False)  # Style prompt
    model = Column(String(100), nullable=True, default="auto")

    # User editable metadata
    title = Column(String(500), nullable=True)
    tags = Column(String(1000), nullable=True)
    workflow = Column(String(50), nullable=True)  # onWork, inUse, notUsed, or NULL
    is_instrumental = Column(Boolean, nullable=True, default=False)  # True for instrumental songs
    
    # Status tracking
    status = Column(String(50), nullable=False, default="PENDING")  # PENDING, PROGRESS, SUCCESS, FAILURE, CANCELLED
    progress_info = Column(Text, nullable=True)  # JSON string for progress details
    error_message = Column(Text, nullable=True)
    
    # Relation to song choices (1:n)
    choices = relationship("SongChoice", back_populates="song", cascade="all, delete-orphan", order_by="SongChoice.choice_index")
    
    # MUREKA response data
    mureka_response = Column(Text, nullable=True)  # JSON string der kompletten MUREKA Response
    mureka_status = Column(String(100), nullable=True)
    
    # Timestamps
    created_at = Column(DateTime(timezone=True), server_default=func.now())
    updated_at = Column(DateTime(timezone=True), onupdate=func.now())
    completed_at = Column(DateTime(timezone=True), nullable=True)
    
    def __repr__(self):
        return f"<Song(id={self.id}, task_id='{self.task_id}', status='{self.status}', choices={len(self.choices) if self.choices else 0})>"


class SongChoice(Base):
    """Model for storing individual song choice results from MUREKA"""
    __tablename__ = "song_choices"
    __table_args__ = {'extend_existing': True}
    
    # Primary identifiers
    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    song_id = Column(UUID(as_uuid=True), ForeignKey("songs.id"), nullable=False, index=True)
    
    # MUREKA choice data
    mureka_choice_id = Column(String(255), nullable=True)  # MUREKA's choice ID
    choice_index = Column(Integer, nullable=True)  # Index in choices array
    
    # URLs and files
    mp3_url = Column(String(1000), nullable=True)
    flac_url = Column(String(1000), nullable=True)
    video_url = Column(String(1000), nullable=True)  # Falls verfügbar
    image_url = Column(String(1000), nullable=True)  # Cover image
    stem_url = Column(String(1000), nullable=True)  # Stems ZIP file URL
    
    # Metadata
    duration = Column(Float, nullable=True)  # Duration in milliseconds (as returned by MUREKA)
    title = Column(String(500), nullable=True)
    tags = Column(String(1000), nullable=True)  # Comma-separated
    rating = Column(Integer, nullable=True)  # User rating: NULL=not set, 0=thumbs down, 1=thumbs up

    # Timestamps
    created_at = Column(DateTime(timezone=True), server_default=func.now())
    updated_at = Column(DateTime(timezone=True), onupdate=func.now())
    stem_generated_at = Column(DateTime(timezone=True), nullable=True)  # When stems were generated
    
    # Relation back to song
    song = relationship("Song", back_populates="choices")

    def __repr__(self):
        return f"<SongChoice(id={self.id}, song_id={self.song_id}, choice_index={self.choice_index}, duration={self.duration})>"


class GeneratedImage(Base):
    """Model for storing generated image metadata"""
    __tablename__ = "generated_images"
    __table_args__ = {'extend_existing': True}

    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    prompt = Column(Text, nullable=False)
    size = Column(String(20), nullable=False)
    filename = Column(String(255), nullable=False, unique=True)
    file_path = Column(String(500), nullable=False)
    local_url = Column(String(500), nullable=False)
    model_used = Column(String(100), nullable=True)
    prompt_hash = Column(String(32), nullable=True)
    title = Column(String(255), nullable=True)  # Custom user title
    tags = Column(Text, nullable=True)  # Comma-separated tags
    created_at = Column(DateTime(timezone=True), server_default=func.now())
    updated_at = Column(DateTime(timezone=True), onupdate=func.now())

    def __repr__(self):
        return f"<GeneratedImage(id={self.id}, filename='{self.filename}', prompt='{self.prompt[:50]}...')>"


class PromptTemplate(Base):
    """Model for storing AI prompt templates for different categories and actions"""
    __tablename__ = "prompt_templates"
    __table_args__ = {'extend_existing': True}

    id = Column(Integer, primary_key=True, autoincrement=True)
    category = Column(String(50), nullable=False)
    action = Column(String(50), nullable=False)
    pre_condition = Column(Text, nullable=False)
    post_condition = Column(Text, nullable=False)
    description = Column(Text, nullable=True)
    version = Column(String(10), nullable=True)
    model = Column(String(50), nullable=True)  # Renamed from model_hint
    temperature = Column(Float, nullable=True)  # For Ollama Chat API (0.0-2.0)
    max_tokens = Column(Integer, nullable=True)  # Maximum tokens to generate
    active = Column(Boolean, default=True, nullable=False)
    created_at = Column(DateTime(timezone=True), server_default=func.now())
    updated_at = Column(DateTime(timezone=True), onupdate=func.now())

    def __repr__(self):
        return f"<PromptTemplate(id={self.id}, category='{self.category}', action='{self.action}', active={self.active})>"


class User(Base):
    """Model for user authentication and management with OAuth2 preparation"""
    __tablename__ = "users"
    __table_args__ = {'extend_existing': True}

    # Primary identifier
    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)

    # Authentication fields
    email = Column(String(255), nullable=False, unique=True, index=True)
    password_hash = Column(String(255), nullable=True)  # Nullable for OAuth2 users

    # User profile
    first_name = Column(String(100), nullable=True)
    last_name = Column(String(100), nullable=True)

    # OAuth2 preparation (for future use)
    oauth_provider = Column(String(50), nullable=True)  # 'google', 'github', etc.
    oauth_id = Column(String(255), nullable=True)  # OAuth provider user ID

    # Status and security
    is_active = Column(Boolean, default=True, nullable=False)
    is_verified = Column(Boolean, default=False, nullable=False)

    # Timestamps
    created_at = Column(DateTime(timezone=True), server_default=func.now())
    updated_at = Column(DateTime(timezone=True), onupdate=func.now())
    last_login = Column(DateTime(timezone=True), nullable=True)

    # Relationships
    conversations = relationship("Conversation", back_populates="user", cascade="all, delete-orphan")

    def __repr__(self):
        return f"<User(id={self.id}, email='{self.email}', active={self.is_active})>"


class Conversation(Base):
    """Model for storing AI chat conversations"""
    __tablename__ = "conversations"
    __table_args__ = {'extend_existing': True}

    # Primary identifier
    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    user_id = Column(UUID(as_uuid=True), ForeignKey("users.id"), nullable=False, index=True)

    # Conversation metadata
    title = Column(String(255), nullable=False)
    model = Column(String(100), nullable=False)  # Ollama model used
    system_context = Column(Text, nullable=True)  # System prompt/context

    # Token tracking
    context_window_size = Column(Integer, nullable=False, server_default="2048")  # Max tokens for this model
    current_token_count = Column(Integer, nullable=False, server_default="0")  # Current total tokens used

    # Timestamps
    created_at = Column(DateTime(timezone=True), server_default=func.now())
    updated_at = Column(DateTime(timezone=True), onupdate=func.now())

    # Relationships
    user = relationship("User", back_populates="conversations")
    messages = relationship("Message", back_populates="conversation", cascade="all, delete-orphan", order_by="Message.created_at")

    def __repr__(self):
        return f"<Conversation(id={self.id}, title='{self.title}', model='{self.model}', messages={len(self.messages) if self.messages else 0})>"


class Message(Base):
    """Model for storing individual messages in a conversation"""
    __tablename__ = "messages"
    __table_args__ = {'extend_existing': True}

    # Primary identifier
    id = Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4, index=True)
    conversation_id = Column(UUID(as_uuid=True), ForeignKey("conversations.id"), nullable=False, index=True)

    # Message content
    role = Column(String(50), nullable=False)  # 'user', 'assistant', 'system'
    content = Column(Text, nullable=False)

    # Token tracking
    token_count = Column(Integer, nullable=True)  # Token count for this message

    # Timestamps
    created_at = Column(DateTime(timezone=True), server_default=func.now())

    # Relationship
    conversation = relationship("Conversation", back_populates="messages")

    def __repr__(self):
        return f"<Message(id={self.id}, role='{self.role}', conversation_id={self.conversation_id})>"